2009-03-13  Adam Bergkvist <adam.bergkvist@ericsson.com>

Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=24349
        [QT] HTTP status text is never set

        Set HTTP status text to the reason phrase attribute of QNetworkReply.

        * platform/network/qt/QNetworkReplyHandler.cpp:
        (WebCore::QNetworkReplyHandler::sendResponseIfNeeded):



Canonical link: https://commits.webkit.org/33723@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41664 268f45cc-cd09-0410-ab3c-d52691b4dbfc